# terminal-poker

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: publish-crates.yml  release.yml
homebrew/: terminal-poker.rb
scripts/: build-release.sh  install.sh
src/: lib.rs  main.rs
src/bot/: draws.rs  mod.rs  preflop.rs  rule_based.rs
src/game/: actions.rs  deck.rs  hand.rs  mod.rs  state.rs
src/stats/: models.rs  persistence.rs
src/ui/: app.rs  input.rs  mod.rs  render.rs
tests/: integration_test.rs
