[package]
name = "terminal-poker"
version = "1.0.1-rc.1"
edition = "2021"
description = "Heads-up No-Limit Texas Hold'em poker for the terminal"
license = "MIT"
repository = "https://github.com/ashxudev/terminal-poker"
keywords = ["poker", "terminal", "tui", "game", "training"]
categories = ["games", "command-line-utilities"]
homepage = "https://github.com/ashxudev/terminal-poker"
default-run = "poker"

# Both binaries use the same source - users can run `terminal-poker` or `poker`
[[bin]]
name = "terminal-poker"
path = "src/main.rs"

[[bin]]
name = "poker"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
